# QT6

./: README.md
Task2/: CMakeLists.txt  Main.qml  main.cpp
task1/: CMakeLists.txt  main.cpp
task3/: CMakeLists.txt  Main.qml  led_controller.cpp  led_controller.h  main.cpp
